hard-gists/005ceac0483fc5a581cc/run.log
=== Docker Run Log for 005ceac0483fc5a581cc ===
Started at: Mi 29. Okt 11:18:17 CET 2025

[2025-10-29 11:18:17] START: Running container for 005ceac0483fc5a581cc
[2025-10-29 11:18:18] SUCCESS: Container c025e92ce9638a5b55ce9a2e17b49ff91ecbf2a848a9c17165139d5426743239 started for 005ceac0483fc5a581cc
=== Container logs for 005ceac0483fc5a581cc ===
  File "/snippet.py", line 53
    print sess.run(
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 005ceac0483fc5a581cc ===
[2025-10-29 11:18:20] INFO: Container c025e92ce9638a5b55ce9a2e17b49ff91ecbf2a848a9c17165139d5426743239 has stopped
